test/invalid/baseline/callback-noparen.txt
Syntax error at line 1 in callback-noparen.webidl, since `callback YourCall`:
callback YourCall = void;
                        ^ Callback lacks parentheses for arguments
